--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -1,5 +1,6 @@
 body { 
     font-family: Arial, sans-serif; margin: 20px; 
+    background-color: ivory;
 }
 
 #results { 
@@ -18,12 +19,26 @@ img {
     height: 100px; 
 }
 
-#chat-element {
-    background-color: grey;
-    border-style: solid;
-    border-width: 2px;
-    border-color: black;
-    display: flex;
-    align-items: center;
+.chat-element {
+    border-style: solid; 
+    border-width: 2px; 
+    border-color: black; 
+    border-radius: 0%;
+    margin-left: 0; 
+    margin-right: 0;
+    padding: 10px;
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-top: 2.5px;
+}
+
+#chatbox {
+    border:1px solid #ccc; 
+    padding:10px; 
+    max-width:600px; 
+    min-height:200px;
+    display: flex; 
+    align-items: center; 
     flex-direction: column;
+    background-color: white;
 }
