--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -31,11 +31,18 @@ img {
     padding-right: 5px;
     padding-top: 2.5px;
 }
+.gemini-tekst-bokser {
+    display: flex;
+    justify-items: space-around;
+    flex-direction: row;
+    width: 90%;
+}
 
-#chatbox {
+.chatbox {
     border:1px solid #ccc; 
     padding:10px; 
-    max-width:600px; 
+    width: 70%;
+    min-width: 30%;
     min-height:200px;
     display: flex; 
     align-items: center; 
