la til MVP av kobling mellom gemini sin chat respons bok anbefaling og google books api, utskrift av denne responsen ifra google books api-en på samma måte som i google books manuell søk-baren. Videre implementering av chatlog-klasse, lagring, og bedret CSS trengs. La både chatbox til gemini og geminis anbefalinger i en flexboks.

--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -33,9 +33,11 @@ img {
 }
 .gemini-tekst-bokser {
     display: flex;
-    justify-items: space-around;
+    justify-items: flex-start;
+    align-content: space-between;
+    flex-wrap: nowrap;
     flex-direction: row;
-    width: 90%;
+    width: 100%;
 }
 
 .chatbox {
