--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -48,6 +48,7 @@ img {
     padding:10px; 
     width: 70%;
     min-width: 30%;
+    max-width: 60%;
     min-height:200px;
     display: flex; 
     align-items: center; 
