--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -56,6 +56,22 @@ img {
     background-color: white;
 }
 
+.chats-menu {
+    display: flex;
+    flex-direction: row;
+    background-color: #57595B;
+}
+
+.chats-menu form {
+    margin: 5px;
+    margin-right: 10px;
+}
+
+.chats-menu p {
+    font-family: Arial, Helvetica, sans-serif;
+    color: white
+}
+
 .navbar {
     background-color: #452829;
     height: 4.7rem;
