--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -48,11 +48,28 @@ img {
     padding:10px; 
     width: 70%;
     min-width: 30%;
+    max-width: 60%;
     min-height:200px;
     display: flex; 
     align-items: center; 
     flex-direction: column;
     background-color: white;
+}
+
+.chats-menu {
+    display: flex;
+    flex-direction: row;
+    background-color: #57595B;
+}
+
+.chats-menu form {
+    margin: 5px;
+    margin-right: 10px;
+}
+
+.chats-menu p {
+    font-family: Arial, Helvetica, sans-serif;
+    color: white
 }
 
 .navbar {
