--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -1,5 +1,5 @@
 body, html { 
-    font-family: Arial, sans-serif; margin: 20px; 
+    font-family: Arial, sans-serif; 
     background-color: ivory;
     margin: 0;
     padding: 0;
@@ -37,18 +37,32 @@ img {
 .gemini-tekst-bokser {
     display: flex;
     justify-items: flex-start;
-    align-content: space-between;
+    justify-content: space-around;
     flex-wrap: nowrap;
     flex-direction: row;
     width: 100%;
 }
 
+.gemini-tekst-bokser div {
+    min-width: 50%;
+}
+
 .chatbox {
     border:1px solid #ccc; 
-    padding:10px; 
+    padding:20px; 
     width: 70%;
-    min-width: 30%;
-    max-width: 60%;
+    min-height:200px;
+    display: flex; 
+    align-items: center; 
+    flex-direction: column;
+    background-color: white;
+}
+
+.chatboxAnbefalinger{
+    border:1px solid #ccc; 
+    margin: 0;
+    padding:20px; 
+    width: 70%;
     min-height:200px;
     display: flex; 
     align-items: center; 
